Bug 360165 - npunix.c (plugin sample) is missing lots of function pointer copying and will break with older browsers p=William Bardwell <wbardwel@curl.com> r+sr=jst